NE: apply Vishesh's suggestion part3